# arducam

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
arducam/: __init__.py  camera.py  recorder.py  utils.py
arducam/gui/: controls.py  live_view.py  main_window.py  recording_panel.py  styles.py
docs/superpowers/plans/: 2026-03-28-arducam-camera-api-gui.md
docs/superpowers/specs/: 2026-03-28-arducam-camera-api-gui-design.md
tests/: test_camera.py  test_integration.py  test_recorder.py  test_utils.py
